# Real-Time-Camera-Processing-Pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
ml/: DATA.md  README.md  config.py  requirements.txt
ml/evaluation/: __init__.py  eval_classifier.py  eval_saliency.py  eval_superres.py
ml/export/: __init__.py  export_classifier.py  export_saliency.py  export_superres.py
ml/scripts/: train_saliency_synthetic.py
ml/training/: __init__.py  train_classifier.py  train_saliency.py  train_superres.py
ml/utils/: __init__.py  dataset_utils.py  model_utils.py  visualization.py
src/: main.cpp
src/controls/: config.h  neural_config.h  stage_controller.cpp  stage_controller.h
src/display/: renderer.cpp  renderer.h
src/pipeline/: frame.h  frame_pool.cpp  frame_pool.h  pipeline.cpp  pipeline.h  thread_safe_queue.h
src/profiling/: pipeline_stats.cpp  pipeline_stats.h  scoped_timer.cpp  scoped_timer.h
src/stages/: debayer_stage.cpp  debayer_stage.h  edge_detection_stage.cpp  edge_detection_stage.h  histogram_stage.cpp  histogram_stage.h  noise_reduction_stage.cpp  noise_reduction_stage.h  stage_base.h  tone_mapping_stage.cpp  tone_mapping_stage.h
src/stages/neural/: neural_dispatcher.cpp  neural_dispatcher.h  neural_stage_base.h  saliency_stage.cpp  saliency_stage.h  scene_classifier_stage.cpp  scene_classifier_stage.h  super_resolution_stage.cpp  super_resolution_stage.h
